force-app/main/default/objects/Salesforce_Project__c/Salesforce_Project__c.object-meta.xml
<CustomObject>
    <label>Salesforce Project</label>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>