force-app/main/default/objects/Salesforce_Project__c/fields/Estimated_Workload_MD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Workload_MD__c</fullName>
    <label>Estimated Workload (MD)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>