force-app/main/default/objects/Salesforce_Project__c/fields/Local_Comments__c.field-meta.xml
<CustomField>
    <fullName>Local_Comments__c</fullName>
    <label>Local Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>