force-app/main/default/objects/Salesforce_Project__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <label>Raised By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Local PM</fullName>
            </value>
            <value>
                <fullName>eQuarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>