force-app/main/default/objects/Salesforce_Project__c/fields/Raised_date__c.field-meta.xml
<CustomField>
    <fullName>Raised_date__c</fullName>
    <label>Raised date</label>
    <type>Date</type>
</CustomField>