force-app/main/default/objects/Salesforce_Project__c/fields/Real_workload_spent_MD__c.field-meta.xml
<CustomField>
    <fullName>Real_workload_spent_MD__c</fullName>
    <label>Real workload spent (MD)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>