force-app/main/default/objects/Salesforce_Project__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>