force-app/main/default/objects/Salesforce_Project__c/fields/Sprint_ID__c.field-meta.xml
<CustomField>
    <fullName>Sprint_ID__c</fullName>
    <inlineHelpText>Format : SP-00x</inlineHelpText>
    <label>Sprint ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>