force-app/main/default/objects/Salesforce_Project__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>