force-app/main/default/objects/Salesforce_Project__c/recordTypes/SF_Project.recordType-meta.xml
<RecordType>
    <fullName>SF_Project</fullName>
    <active>true</active>
    <label>SF Project</label>
</RecordType>