force-app/main/default/objects/Salesforce_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project_Phase__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>