force-app/main/default/objects/Salesforce_Project__c/listViews/Open_Tickets.listView-meta.xml
<ListView>
    <fullName>Open_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Module__c</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Raised_date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Delivered,Approved by Business,Closed,Rejected by SPOC,Rejected by eQ</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>pierre</value>
    </filters>
    <label>Open Tickets eQ</label>
</ListView>